--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,23 @@
-.App {
-  text-align: center;
+ul {
+  list-style: none;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
+.ContentHeader {
+  background: #9a74b356;
+  width: 100%;
+  height: 10%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+ul li {
+  padding: 10px;
+  margin: 5px;
+  background: #023230;
+  color: #fff;
+  border-radius: 4px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bolder;
+  cursor: pointer;
 }
