--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,78 @@
-ul {
-  list-style: none;
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-.ContentHeader {
-  background: #9a74b356;
-  width: 100%;
-  height: 10%;
-}
-
-ul li {
-  padding: 10px;
-  margin: 5px;
-  background: #023230;
-  color: #fff;
-  border-radius: 4px;
-  align-items: center;
+.Itext {
+  position: absolute;
+  font-size: 35px;
+  width: 80%;
+  top: 20%;
+  left: 10%;
   text-align: center;
-  font-size: 20px;
-  font-weight: bolder;
+  align-items: center;
+}
+
+.Ibutton {
+  position: absolute;
+  transition-property: border background;
+  transition-timing-function: ease;
+  transition-duration: 0.5s;
+  top: 55%;
+  left: 45%;
+  color: #fff;
+  border: 3px solid #fff;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1;
+  font-size: 17px;
+  background-color: transparent;
+  padding: 10px;
+  outline: none;
+  border-radius: 4px;
   cursor: pointer;
+}
+
+.Ibutton:hover {
+  background: #fff;
+  color: #001000;
+}
+
+.contentHeader {
+  position: fixed;
+  height: 40%;
+  width: 100%;
+  background: linear-gradient(-45deg, #622774, #c53364);
+}
+
+.ContentTask {
+  position: relative;
+  top: 300px;
+  display: flex;
+}
+.ContentTask .card {
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  height: 300px;
+  margin: 10px;
+  position: relative;
+  width: 300px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.ContentTask .card:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+@media screen and (max-width: 1100px) {
+  .contentHeader {
+    width: 99%;
+  }
+  .Itext {
+    width: 79%;
+  }
+  .Ibutton {
+    left: 44%;
+  }
 }
