--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,23 @@
   padding: 0px;
 }
 
+body {
+  background: #e2e1e0;
+}
+
 .Itext {
-  position: absolute;
+  position: relative;
   font-size: 35px;
   width: 80%;
   top: 20%;
   left: 10%;
   text-align: center;
   align-items: center;
+  border-radius: 5px;
+}
+
+.Content {
+  position: relative;
 }
 
 .Ibutton {
@@ -47,14 +56,34 @@
 }
 
 .ContentTask {
-  position: relative;
+  position: fixed;
   top: 300px;
-  display: flex;
+  height: 50%;
+  display: block;
+  width: 100%;
+  overflow: scroll;
 }
+
+.ContentTask::-webkit-scrollbar {
+  width: 7px;
+}
+
+.ContentTask::-webkit-scrollbar-thumb {
+  background: #ff9d00;
+}
+
+.remove {
+  cursor: pointer;
+}
+
+.edit {
+  cursor: pointer;
+}
+
 .ContentTask .card {
+  display: inline-block;
   background: #fff;
   border-radius: 2px;
-  display: inline-block;
   height: 300px;
   margin: 10px;
   position: relative;
@@ -62,12 +91,14 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+
 .ContentTask .card:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
 @media screen and (max-width: 1100px) {
   .contentHeader {
-    width: 99%;
+    width: 100%;
   }
   .Itext {
     width: 79%;
