--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ body {
   position: fixed;
   top: 300px;
   height: 50%;
-  display: block;
+  display: inline-block;
   width: 100%;
   overflow: scroll;
 }
@@ -70,6 +70,7 @@ body {
 
 .ContentTask::-webkit-scrollbar-thumb {
   background: #ff9d00;
+  border-radius: 20px;
 }
 
 .remove {
@@ -81,15 +82,60 @@ body {
 }
 
 .ContentTask .card {
+  overflow-y: hidden;
   display: inline-block;
+  overflow: hidden;
   background: #fff;
-  border-radius: 2px;
+  border-radius: 5px;
   height: 300px;
   margin: 10px;
   position: relative;
   width: 300px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.buttonDelete {
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  right: 3%;
+  top: 3%;
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 50%;
+  background: #fff;
+  transition: background 0.4s ease;
+}
+.buttonDelete:hover {
+  background: rgba(126, 134, 143, 0.513);
+}
+
+.edit {
+  position: absolute;
+  font-family: fantasy;
+  right: 30%;
+  top: 10%;
+  font-size: 30px;
+  padding: 5px 40px;
+}
+
+.Div {
+  position: absolute;
+  top: 35%;
+  width: 100%;
+}
+
+.ContentTask .card .text {
+  position: absolute;
+  top: 40%;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 300px;
+  height: auto;
+  word-wrap: break-word;
+  font-size: 19px;
 }
 
 .ContentTask .card:hover {
