--- a/src/App.css
+++ b/src/App.css
@@ -82,10 +82,12 @@ body {
 }
 
 .ContentTask .card {
+  background: #eecda3;
+  background: -webkit-linear-gradient(to top, #ef629f, #eecda3);
+  background: linear-gradient(to top, #ef629f, #eecda3);
   overflow-y: hidden;
   display: inline-block;
   overflow: hidden;
-  background: #fff;
   border-radius: 5px;
   height: 300px;
   margin: 10px;
