--- a/src/App.css
+++ b/src/App.css
@@ -21,14 +21,19 @@ body {
 .Content {
   position: relative;
 }
-
 .Ibutton {
+  left: 35%;
+}
+.deleteAll {
+  left: 50%;
+}
+.Ibutton,
+.deleteAll {
   position: absolute;
   transition-property: border background;
   transition-timing-function: ease;
   transition-duration: 0.5s;
   top: 55%;
-  left: 45%;
   color: #fff;
   border: 3px solid #fff;
   font-family: "Montserrat", sans-serif;
@@ -43,7 +48,8 @@ body {
   cursor: pointer;
 }
 
-.Ibutton:hover {
+.Ibutton:hover,
+.deleteAll:hover {
   background: #fff;
   color: #001000;
 }
@@ -117,11 +123,19 @@ body {
 
 .edit {
   position: absolute;
-  font-family: fantasy;
-  right: 30%;
+  right: 17%;
   top: 10%;
   font-size: 30px;
+  outline: none;
   padding: 5px 40px;
+  background: transparent;
+  border: 3px solid #fff5;
+  border-radius: 50px;
+  transition: background 0.4s ease-in;
+}
+
+.edit:hover {
+  background: #fff5;
 }
 
 .Div {
@@ -152,6 +166,9 @@ body {
     width: 79%;
   }
   .Ibutton {
-    left: 44%;
+    left: 10%;
+  }
+  .deleteAll {
+    left: 50%;
   }
 }
